--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/zoobutiken.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.log4j-api-2.6.2.jar=/Users/yuliiastelmakhovska/Desktop/log4j-api-2.6.2.jar
+file.reference.log4j-core-2.6.2.jar=/Users/yuliiastelmakhovska/Desktop/log4j-core-2.6.2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.log4j-api-2.6.2.jar}:\
+    ${file.reference.log4j-core-2.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
